--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
 	"vcs": {
 		"enabled": false,
 		"clientKind": "git",
@@ -7,16 +7,14 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": [".next/**", "node_modules"],
-		"include": ["app/**/*", "tests/**/*"]
+		"includes": ["app/**/*", "tests/**/*"],
+		"experimentalScannerIgnores": [".next/**", "node_modules/**"]
 	},
 	"formatter": {
 		"enabled": true,
 		"indentStyle": "tab"
 	},
-	"organizeImports": {
-		"enabled": true
-	},
+	"assist": { "actions": { "source": { "organizeImports": "on" } } },
 	"linter": {
 		"enabled": true,
 		"rules": {
@@ -35,12 +33,22 @@
 			},
 			"suspicious": {
 				"noDebugger": "off",
-				"noConsoleLog": "off",
-				"noAssignInExpressions": "off"
+				"noAssignInExpressions": "off",
+				"noConsole": { "level": "off", "options": { "allow": ["log"] } }
 			},
 			"style": {
 				"noShoutyConstants": "off",
-				"useNamingConvention": "off"
+				"useNamingConvention": "off",
+				"noParameterAssign": "error",
+				"useAsConstAssertion": "error",
+				"useDefaultParameterLast": "error",
+				"useEnumInitializers": "error",
+				"useSelfClosingElements": "error",
+				"useSingleVarDeclarator": "error",
+				"noUnusedTemplateLiteral": "error",
+				"useNumberNamespace": "error",
+				"noInferrableTypes": "error",
+				"noUselessElse": "error"
 			},
 			"correctness": {
 				"useExhaustiveDependencies": "off"
